[package]
name = "dots"
version = "0.3.0"
authors = ["Jerry Tegno <jerry@stripe.com>"]
edition = "2018"

[dependencies]
# TODO: Pin this to an actual version once the 3.0 update lands
clap = { git = "https://github.com/clap-rs/clap/", rev = "19c20f7c00310900ce6667baedfe1190e20eeeab" }
dirs = "2.0"
lazy_static = "1.4"
path-clean = "0.1"
walkdir = "2"
